<resources>
    <string name="app_name">Blue Ride</string>
    <string name="art_work">art_work</string>
    <string name="welcome_to_school">Welcome to school</string>
    <string name="skip_this">Skip this</string>
    <string name="signup">Sign Up!</string>
    <string name="signup_description">Please fill the fields out\nto create an account</string>
    <string name="email_hint">Please enter your e-mail</string>
    <string name="mobile_hint">Mobile number</string>
    <string name="id_number_hint">Please enter your ID number</string>
    <string name="password_hint">Please enter your Password</string>
    <string name="username_hint">Please enter your username</string>
    <string name="signin">Sign in</string>
    <string name="signin_description">Now!! You can manage your son/daughter\npickup by one click to enhance their safety</string>
    <string name="verify_number">Verify Your Mobile Number</string>
    <string name="verify_number_message">Please enter your valid mobile number below\nto send verification code</string>
    <string name="verify_btn">Verify</string>
    <string name="enter_4_digits">Enter 5 Digit Code</string>
    <string name="received_code_title">Check your SMS inbox!</string>
    <string name="received_code_message">Verification code was sent automatically to your \nmobile number</string>
    <string name="resend_code">Resend code</string>
    <string name="forget_password">Forget password?</string>
    <string name="welcome_user">Welcome</string>
    <string name="add_first_helper">Please add your first helper to \n create your profile</string>
    <string name="helper_username_hint">Please enter your username</string>
    <string name="helper_id_number_hint">Helper ID</string>
    <string name="add_helper">Add Helper</string>
    <string name="title_activity_parent_home">ParentHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_error">Incorrect password</string>
    <string name="id_number_error">Incorrect ID number</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="create_new_one">Create new one! </string>
    <string name="empty_field">Empty field</string>
    <string name="invalid_id">At least 10 characters</string>
    <string name="invalid_password">At least 6 characters</string>
    <string name="are_u_helper">Helper?</string>
    <string name="signup_here">Sign up here</string>
    <string name="have_account">Already user?</string>
    <string name="signup_as_helper">Sign Up as helper!</string>
    <string name="signup_as_parent">Sign Up as parent!</string>
    <string name="switch_account">Switch account</string>
    <string name="school_title">Schools\nSelect the school to start picking up your students</string>
    <string name="title_activity_helper_profile">HelperProfileActivity</string>
    <string name="allow_to_pick_this_students">Allow to pick this students</string>
    <string name="permission_tv">Permission</string>
    <string name="one_time">One time</string>
    <string name="always">Always</string>
    <string name="Save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="pick_up">Pick Up</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tracking_helper_map">Map</string>
    <string name="address">Address</string>
    <string name="change_your_photo">Change your photo</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="no_requests_to_track">There is no request to track right now.</string>
    <string name="terms_conditions">Read terms and conditions</string>
    <string name="Language">Language</string>
    <string name="en">English</string>
    <string name="ar">Arabic</string>
    <string name="home">Home</string>
    <string name="nav_add_helper">Add helper</string>
    <string name="nav_tracking">Tracking</string>
    <string name="nav_pending_students">Pending students</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_privacy">Terms &amp; Privacy Policy</string>
    <string name="you_dont_have_another_account">You don\'t have another account to switch</string>
    <string name="no_app_to_PDF">No Application available to view PDF</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="accept_terms">You need to accept terms and conditions</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="cant_deliver_students">You can\'t deliver this student</string>
    <string name="deliver_non_student_error">Select the school and your students first</string>
    <string name="far_away_error">You are too far away to pick up</string>
    <string name="request_sent">Pick request sent successfully</string>
    <string name="request_canceld">Request cancelled</string>
    <string name="enter_valid_data">Enter valid data</string>
    <string name="changes_saved">Changes saved</string>
    <string name="verification_code_sent">Code successfully sent</string>
    <string name="already_in_request">Already in request</string>
    <string name="changed_nothing">You changed nothing</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="terms_permission_explanation">In order to read terms and conditions, We need your permission to access your storage</string>
    <string name="picture_permssion_explanation">In order to continue and change picture, We need your permission to access your storage</string>
    <string name="location_permission_explanation">In order to continue and start picking your students, We need your permission to access the location service</string>
    <string name="allow_permission">Allow</string>
    <string name="no_pending_students">There is no pending students right now</string>
    <string name="schools">Schools</string>
    <string name="students_requests">Student requests</string>
    <string name="notification">Messages</string>
    <string name="basic_information">Basic information</string>
    <string name="parent_toolbar_title">Please select your son/daughter school</string>
    <string name="start">Start</string>
    <string name="add_helper_mobile_hint">Enter his/her mobile number</string>
    <string name="later">Later</string>
    <string name="school_notified">School has been notified</string>
    <string name="no_notifications">You don\'t have any messages</string>
    <string name="your_notification">Your messages</string>
    <string name="need_to_signup">User does not exist</string>
    <string name="pending_state">Get Ready</string>
    <string name="parent_arrived_state">Let’s Go</string>
    <string name="reported_state">Hurry Up!</string>
    <string name="deliverd_to_supervisor_state">With Supervisor</string>
    <string name="grade">Grade</string>
    <string name="student_class">Class</string>
    <string name="select">Select</string>
    <string name="parent">Parent</string>
    <string name="mentor">Mentor</string>
    <string name="teacher">Teacher</string>
    <string name="helper">Helper</string>
    <string name="edit_your_information">Edit your information</string>
    <string name="your_students">Your Students</string>
    <string name="your_helpers">Your helpers</string>
    <string name="role_switcher_title">Select the account to switch</string>

    <string name="title_activity_privacy_policy">Terms &amp; Privacy Policy</string>
    <array name="phoneCodes">
        <item>"+966"</item>
        <item>"+2"</item>
    </array>
</resources>
