<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home_ico"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_add_helper"
            android:icon="@mipmap/helper_ico"
            android:title="@string/nav_add_helper" />

        <item
            android:id="@+id/nav_tracking"
            android:icon="@mipmap/helper_ico"
            android:title="@string/nav_tracking" />

        <item
            android:id="@+id/nav_pending_students"
            android:icon="@mipmap/student_ico"
            android:visible="false"
            android:title="@string/nav_pending_students" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/setting_ico"
            android:title="@string/nav_setting" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_outline_lock_24px"
            android:title="@string/nav_privacy"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/logout_ico"
            android:title="@string/nav_logout" />

    </group>


</menu>
