<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/nav_header_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="new post image"
            android:scaleType="centerCrop"
            android:src="@mipmap/profile_logo"
            android:visibility="visible"
            app:actualImageResource="@mipmap/profile_logo"
            app:actualImageScaleType="centerCrop"
            app:placeholderImage="@mipmap/profile_logo"
            app:roundAsCircle="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.mahmoudsamir.schoolappand.widgets.CairoTextView
                android:id="@+id/nav_header_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/main_background_color" />

            <com.example.mahmoudsamir.schoolappand.widgets.CairoTextView
                android:id="@+id/nav_header_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/main_background_color" />
        </LinearLayout>
    </LinearLayout>

    <com.example.mahmoudsamir.schoolappand.widgets.CairoButton
        android:layout_marginTop="10dp"
        android:id="@+id/switch_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_main_background"
        android:backgroundTint="@color/green"
        android:paddingHorizontal="30dp"
        android:text="@string/switch_account"
        android:textAllCaps="false" />
</LinearLayout>
